feat(auth): implement JWT generation and role-based login logic